# retort

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  ai.md  aider.sh
ci/: build.sh  ci.sh  lint.sh  steps.md
plan/: hooks_git.md
plans/: conversation-ds-reqs.md  conversation_ds_ideas.md  editor-confirm-workflow.md  file-management-project.md  file-management.md  hooks_git.md  profile-ideas.md  prototype.md  prototype_request_content.txt
prompts/: _diff_fenced_system_prompt.j2  _final_reminders.j2  _shell_cmd_prompt.j2  _shell_cmd_reminder.j2  diff_fenced.j2
scripts/: ci.sh  fmt.sh  test.sh
src/: cli.rs  config.rs  db.rs  lib.rs  llm.rs  main.rs  prompt.rs
src/hooks/: mod.rs  postprocessor.rs
tests/: cli.rs  cli_fence.rs  cli_fence_temp.rs  config.rs
tests/integration/: chat.rs  context.rs  main.rs  mod.rs
