[package]
name = "retort"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10.1"
