[package]
name = "retort"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3"
llm = { version = "1.3.4", features = ["google"] }
minijinja = { version = "2.12.0", features = ["loader", "serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10.1"

# from: https://github.com/johnthagen/min-sized-rust
# note that these may affect compile time and runtime, might be better to disable
[profile.release]
#strip = true # Automatically strip symbols from the binary.
#opt-level = "z" # Optimize for size
#lto = true # Link Time Optimization
